# But_multiplier

./: But_multiplier.v  CMakeLists.txt  CMakeLists.txt   README.md  main.cpp  run.sh  testbanch.v
but/: cli.cpp  cli.hpp  config.hpp  generator.cpp  generator.hpp
tests/: generator.cpp
